syntax = "proto3";
package checkout.api.v1;

import "google/protobuf/empty.proto";
option go_package = "ticket-system/checkout/api/v1;api";

service CheckoutService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetUserCart(GetUserCartRequest) returns (GetUserCartResponse);
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
  rpc UpdateCart(UpdateCartRequest) returns (google.protobuf.Empty);
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc MarkOrderAsPaid(MarkOrderAsPaidRequest) returns (google.protobuf.Empty);
  rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty);
}

message ListOrdersRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message GetUserCartRequest {
  string user_id = 1;
}

message GetUserCartResponse {
  repeated Cart carts = 1;
}

message Cart {
  string id = 1;
  string user_id = 2;
  string ticket_id = 3;
  int32 count = 4;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message PlaceOrderResponse {
  Order order = 1;
}

message Order {
  string id = 1;
  string user_id = 2;
  Status status = 3;
  repeated Item items = 4;
}

enum Status {
  CREATED = 0;
  PAID = 1;
  FAILED = 2;
  CANCELLED = 3;
}

message Item {
  string id = 1;
  string order_id = 2;
  string stock_id = 3;
  string ticket_id = 4;
  int32 count = 5;
}

message AddToCartRequest {
  string user_id = 1;
  string ticket_id = 2;
  int32 count = 3;
}

message AddToCartResponse {
  string id = 1;
  string user_id = 2;
  string ticket_id = 3;
  int32 count = 4;
}

message UpdateCartRequest {
  string id = 1;
  string user_id = 2;
  string ticket_id = 3;
  int32 count = 4;
}

message PlaceOrderRequest {
  string user_id = 1;
}

message MarkOrderAsPaidRequest {
  string id = 1;
}

message CancelOrderRequest {
  string id = 1;
}